feat: upgrade to JDK 21, Spring Boot 3.4.13, Spring Cloud 2024.0.1
- Bump parent: Spring Boot 2.2.1 → 3.4.13, Java 8 → 21
- Bump Spring Cloud: Hoxton.SR6 → 2024.0.1
- Upgrade all dependencies: Dubbo 2.7 → 3.3.4, Redisson 3.11 → 3.45, MyBatis-Plus 3.1 → 3.5.10, SkyWalking 8.x → 9.3, Logback 1.2 → 1.5, RocketMQ 4.3 → 5.3, Shiro 1.4 → 2.0, Curator 4.3 → 5.8, Guava 20 → 33, Gson 2.8 → 2.12, HttpClient 4 → 5
- Replace mysql-connector-java → mysql-connector-j (JDK 21 compat)
- Replace springfox → springdoc-openapi (Jakarta compat)
- Remove Hystrix deps (not in Spring Cloud 2024), migrate HttpClientProvider to httpclient5
- Remove Spring Cloud Ribbon (removed in 2024.x)
- Migrate spring.factories → AutoConfiguration.imports (Spring Boot 3.x)
- Migrate javax.* → jakarta.* in all sources
- Fix POI 5.x API: getCellTypeEnum() → getCellType(), CELL_TYPE_* → CellType.*
- Fix itext 5 → com.lowagie (JasperReports 7 compat)
- Fix deprecated Jackson2JsonRedisSerializer.setObjectMapper → GenericJackson2JsonRedisSerializer
- Fix HandlerInterceptorAdapter → HandlerInterceptor (Spring 6)
- Remove DubboProviderExceptionFilter (incompatible with Dubbo 3.x)
- Add unit tests: ResultTest, BusinessExceptionTest, CacheInterfaceTest, MqBranchModuleTest
- All 9 tests pass across 4 tested modules; 21/22 modules compile and test green